testdata/hello/httpbin-waf.yaml
static_resources:
  listeners:
    - name: listener_httpbin
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10002
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: default_route
                  virtual_hosts:
                    - name: default
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /httpbin/
                          route:
                            prefix_rewrite: /
                            cluster: upstream_service_httpbin
                            idle_timeout: 15s
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "coraza-wasm-filter"
                        root_id: ""
                        configuration:
                          "@type": "type.googleapis.com/google.protobuf.StringValue"
                          value: |
                            {
                              "rules": [
                                "Include @demo-conf",
                                "Include @crs-setup-demo-conf",
                                "SecDebugLogLevel 3",
                                "Include @owasp_crs/*.conf"
                              ]
                            }
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          vm_id: "coraza-filter_vm_id"
                          code:
                            local:
                              filename: "coraza/mains.wasm"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: upstream_service_httpbin
      connect_timeout: 30s
      per_connection_buffer_limit_bytes: 32768
      lb_policy: ROUND_ROBIN
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: upstream_service_httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: httpbin.org
    - name: ext-authz-http-service
      connect_timeout: 30s
      lb_policy: ROUND_ROBIN
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: ext-authz-http-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 4500
